[gd_scene load_steps=2 format=3 uid="uid://dirfmucd1cecd"]

[ext_resource type="Script" path="res://scripts/util/hurtbox.gd" id="1_olsxd"]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_olsxd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="disabled_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="disabled_timer" to="." method="_on_disabled_timer_timeout"]
